syntax = "proto3";

package indexservice;

import "RADIC/types/doc.proto";
import "RADIC/types/term_query.proto";

message DocId {
    string DocId = 1;
}

message AffectedCount {
    int32 Count = 1;
}

message SearchRequest {
    types.TermQuery Query = 1;
    uint64 OnFlag = 2;
    uint64 OffFlag = 3;
    repeated uint64 OrFlags = 4;
}

message SearchResult {
    repeated types.Document Results = 1;
}

// AffectedCount:受影响的数据条数
service IndexService {
    rpc DeleteDoc(DocId) returns (AffectedCount);
    rpc AddDoc(types.Document) returns (AffectedCount);
    rpc Search(SearchRequest) returns (SearchResult);
}

// protoc -I=S:/VsCode_Repo/GoLandCode/radic/types 
//           --gogofaster_opt=Mdoc.proto=RADIC/types 
//           --gogofaster_opt=Mterm_query.proto=RADIC/types 
//           --gogofaster_out=plugins=grpc:./index_service 
//           --proto_path=./index_service index.proto